# octopi

./: Cargo.toml  README.md  accounts.csv
integration_test_data/: chargeback.csv  decimals.csv  deposit.csv  dispute.csv  error_bad_format.csv  error_unknown_command.csv  medium.csv  multiple_accounts.csv  resolve.csv  transactions_1mb.csv  transactions_stress_test.csv  withdraw.csv
src/: engine.rs  error.rs  lib.rs  main.rs  transaction.rs
src/engine/: account.rs  engine.rs  mod.rs  transaction.rs  unit_tests.rs
tests/: engine_tests.rs  stream_transactions_tests.rs
