[package]
edition = "2021"
name    = "octopi"
version = "0.1.0"

[profile.release]
overflow-checks = false

[dependencies]
anyhow       = "1.0.98"
csv          = "1.3"
rust_decimal = "1.37.2"
serde        = { version = "1.0", features = [ "derive" ] }
thiserror    = "2.0.10"
tokio        = { version = "1.45.1", features = [ "full" ] }

[dev-dependencies]
tempfile = "3.8"
